--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <div class="mt-6 space-x-4 text-2xl">
       <a href="https://github.com/prince-akpayang" target="_blank" class="text-gray-600 hover:text-indigo-600"><i class="fab fa-github"></i></a>
-      <a href="https://linkedin.com/in/etini-akpayang" target="_blank" class="text-gray-600 hover:text-indigo-600"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.linkedin.com/in/etini-akpayang-754aa4101/" target="_blank" class="text-gray-600 hover:text-indigo-600"><i class="fab fa-linkedin"></i></a>
       <a href="https://twitter.com/" target="_blank" class="text-gray-600 hover:text-indigo-600"><i class="fab fa-twitter"></i></a>
     </div>
   </section>
