--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <div class="max-w-4xl mx-auto px-6 text-center">
       <h3 class="text-3xl font-semibold mb-6">Get In Touch</h3>
       <p class="text-gray-600 mb-4">Feel free to reach out via email or connect with me on LinkedIn.</p>
-      <a href="mailto:your.email@example.com" class="bg-indigo-600 text-white px-6 py-3 rounded-lg shadow hover:bg-indigo-700">Email Me</a>
+      <a href="mailto:princeakpayang@gmail.com" class="bg-indigo-600 text-white px-6 py-3 rounded-lg shadow hover:bg-indigo-700">Email Me</a>
     </div>
   </section>
 
