--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- Hero Section -->
   <section class="min-h-screen flex flex-col justify-center items-center text-center px-6">
     <h2 class="text-4xl md:text-5xl font-bold mb-4">Hi, I'm <span class="text-indigo-600">Etini Akpayang</span></h2>
-    <img src="profile.jpg" alt="Etini Akpayang" class="w-32 h-32 rounded-full shadow-lg mb-4">
+    <img src="profile.png" alt="Etini Akpayang" class="w-32 h-32 rounded-full shadow-lg mb-4">
     <p class="text-lg md:text-xl text-gray-600 max-w-2xl mb-6">
       A Statistician and Tech-Savvy Educator, passionate about data, technology, and empowering learners with the right tools to excel in academics and beyond.
     </p>
