--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1 class="text-2xl font-bold text-indigo-600">Etini Akpayang</h1>
       <nav class="space-x-6">
         <a href="#about" class="hover:text-indigo-500">About</a>
-        <a href="#skills" class="hover:text-indigo-500">Skills</a>
+        <a href="#analytics" class="hover:text-indigo-500">Analytics Skills</a>
         <a href="#projects" class="hover:text-indigo-500">Projects</a>
         <a href="#contact" class="hover:text-indigo-500">Contact</a>
       </nav>
@@ -23,9 +23,9 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="min-h-screen flex flex-col justify-center items-center text-center px-6">
-    <h2 class="text-4xl md:text-5xl font-bold mb-4">Hi, I'm <span class="text-indigo-600">Etini Akpayang</span></h2>
+  <section class="min-h-screen flex flex-col justify-center items-center text-center px-6 pt-20">
     <img src="assets/profile.png" alt="Etini Akpayang" class="w-32 h-32 rounded-full shadow-lg mb-4">
+    <h2 class="text-4xl md:text-5xl font-bold mb-4">Hi, I'm <span class="text-indigo-600">Etini Akpayang</span></h2>
     <p class="text-lg md:text-xl text-gray-600 max-w-2xl mb-6">
       A Statistician and Tech-Savvy Educator, passionate about data, technology, and empowering learners with the right tools to excel in academics and beyond.
     </p>
@@ -35,7 +35,7 @@
     </div>
     <div class="mt-6 space-x-4 text-2xl">
       <a href="https://github.com/prince-akpayang" target="_blank" class="text-gray-600 hover:text-indigo-600"><i class="fab fa-github"></i></a>
-      <a href="https://www.linkedin.com/in/etini-akpayang-754aa4101/" target="_blank" class="text-gray-600 hover:text-indigo-600"><i class="fab fa-linkedin"></i></a>
+      <a href="https://linkedin.com/in/etini-akpayang" target="_blank" class="text-gray-600 hover:text-indigo-600"><i class="fab fa-linkedin"></i></a>
       <a href="https://twitter.com/" target="_blank" class="text-gray-600 hover:text-indigo-600"><i class="fab fa-twitter"></i></a>
     </div>
   </section>
@@ -51,26 +51,28 @@
     </div>
   </section>
 
-  <!-- Skills Section -->
-  <section id="skills" class="py-20 bg-gray-100">
+  <!-- Data Analytics Expertise Section -->
+  <section id="analytics" class="py-20 bg-gray-100">
     <div class="max-w-6xl mx-auto px-6 text-center">
-      <h3 class="text-3xl font-semibold mb-12">Skills</h3>
-      <div class="grid md:grid-cols-4 gap-8 text-center">
-        <div>
-          <i class="fas fa-chart-line text-indigo-600 text-4xl mb-4"></i>
-          <p class="font-semibold">Data Analysis</p>
+      <h3 class="text-3xl font-semibold mb-12">Data Analytics Expertise</h3>
+      <p class="text-gray-600 text-lg mb-10">
+        I specialize in extracting insights from data using statistical methods, visualization, and modern analytics tools to drive decision-making.
+      </p>
+      <div class="grid md:grid-cols-3 gap-8">
+        <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
+          <i class="fas fa-database text-indigo-600 text-4xl mb-4"></i>
+          <h4 class="font-semibold text-xl mb-2">Data Cleaning & Analysis</h4>
+          <p class="text-gray-600">Proficient in R, Python, and SQL for processing and analyzing datasets.</p>
         </div>
-        <div>
-          <i class="fas fa-laptop-code text-indigo-600 text-4xl mb-4"></i>
-          <p class="font-semibold">Programming (R, Python)</p>
+        <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
+          <i class="fas fa-chart-bar text-indigo-600 text-4xl mb-4"></i>
+          <h4 class="font-semibold text-xl mb-2">Data Visualization</h4>
+          <p class="text-gray-600">Experience creating dashboards with Power BI, Tableau, and ggplot2.</p>
         </div>
-        <div>
-          <i class="fas fa-chalkboard-teacher text-indigo-600 text-4xl mb-4"></i>
-          <p class="font-semibold">Teaching & Training</p>
-        </div>
-        <div>
-          <i class="fas fa-lightbulb text-indigo-600 text-4xl mb-4"></i>
-          <p class="font-semibold">Educational Technology</p>
+        <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
+          <i class="fas fa-brain text-indigo-600 text-4xl mb-4"></i>
+          <h4 class="font-semibold text-xl mb-2">Predictive Modeling</h4>
+          <p class="text-gray-600">Skilled in building statistical models and forecasts for decision support.</p>
         </div>
       </div>
     </div>
@@ -81,30 +83,69 @@
     <div class="max-w-6xl mx-auto px-6">
       <h3 class="text-3xl font-semibold text-center mb-12">Projects</h3>
       <div class="grid md:grid-cols-3 gap-8">
+
+        <!-- Project 1 -->
         <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="https://via.placeholder.com/400x200" alt="Project 1" class="w-full">
+          <img src="assets/handwash analysis.png" alt="Dr. Semmelweis and the Discovery of Handwashing" class="w-full">
           <div class="p-6">
-            <h4 class="font-bold text-xl mb-2">Project One</h4>
-            <p class="text-gray-600 mb-4">Brief description of the project and its impact.</p>
-            <a href="#" class="text-indigo-600 hover:underline">View Project →</a>
+            <h4 class="font-bold text-xl mb-2">Dr. Semmelweis and the Discovery of Handwashing</h4>
+            <p class="text-gray-600 mb-4">Data analysis project exploring historical medical data that led to the discovery of handwashing as a life-saving practice.</p>
+            <a href="https://app.datacamp.com/workspace/w/0b1b9534-f77c-43f6-9323-5ac560341302/edit" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
           </div>
         </div>
+
+        <!-- Project 2 -->
         <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="https://via.placeholder.com/400x200" alt="Project 2" class="w-full">
+          <img src="assets/pandemic analysis.png" alt="Visualizing COVID-19" class="w-full">
           <div class="p-6">
-            <h4 class="font-bold text-xl mb-2">Project Two</h4>
-            <p class="text-gray-600 mb-4">Brief description of the project and its impact.</p>
-            <a href="#" class="text-indigo-600 hover:underline">View Project →</a>
+            <h4 class="font-bold text-xl mb-2">Visualizing COVID-19</h4>
+            <p class="text-gray-600 mb-4">Interactive visualizations showing the global spread of COVID-19 and its impact across countries.</p>
+            <a href="https://app.datacamp.com/workspace/w/0434d327-6d31-43ac-b422-bf154797b0b1/edit" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
           </div>
         </div>
+
+        <!-- Project 3 -->
         <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="https://via.placeholder.com/400x200" alt="Project 3" class="w-full">
+          <img src="assets/masters research.PNG" alt="Masters Thesis 2021" class="w-full">
           <div class="p-6">
-            <h4 class="font-bold text-xl mb-2">Project Three</h4>
-            <p class="text-gray-600 mb-4">Brief description of the project and its impact.</p>
-            <a href="#" class="text-indigo-600 hover:underline">View Project →</a>
+            <h4 class="font-bold text-xl mb-2">Masters Thesis 2021</h4>
+            <p class="text-gray-600 mb-4">Advanced statistical research focused on Bayesian approaches for educational data analysis.</p>
+            <a href="assets/MScThesis.pdf" target="_blank" class="text-indigo-600 hover:underline">Read Thesis →</a>
           </div>
         </div>
+
+        <!-- Project 4 -->
+        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+          <img src="assets/statReport.png" alt="Statistical Report" class="w-full">
+          <div class="p-6">
+            <h4 class="font-bold text-xl mb-2">Statistical Report</h4>
+            <p class="text-gray-600 mb-4">Comparative analysis of three non-parametric Bayesian techniques with practical implications.</p>
+            <a href="https://github.com/Prince-akpayang/Comparison-of-three-common-nonparametric-Bayes-techniques-" target="_blank" class="text-indigo-600 hover:underline">View Report →</a>
+          </div>
+        </div>
+
+        <!-- Project 5 -->
+        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+          <img src="assets/Analytics dashboard.PNG" alt="Learner Performance Analytics Dashboard" class="w-full">
+          <div class="p-6">
+            <h4 class="font-bold text-xl mb-2">Learner Performance Analytics Dashboard</h4>
+            <p class="text-gray-600 mb-4">An interactive dashboard analyzing learner performance metrics using R Shiny for real-time insights.</p>
+            <a href="https://sloneo-etini-akpayang.shinyapps.io/TFN_FELLOWS_STATPAD/" target="_blank" class="text-indigo-600 hover:underline">View Dashboard →</a> |
+            <a href="https://github.com/Prince-akpayang/statpad/edit/main/README.md" target="_blank" class="text-indigo-600 hover:underline">Scripts</a>
+          </div>
+        </div>
+
+        <!-- Project 6 -->
+        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+          <img src="assets/whatsanals.PNG" alt="Whatsapp Chat Analysis" class="w-full">
+          <div class="p-6">
+            <h4 class="font-bold text-xl mb-2">Whatsapp Chat Analysis</h4>
+            <p class="text-gray-600 mb-4">Data cleaning and sentiment analysis of WhatsApp chats with interactive visual analytics.</p>
+            <a href="https://sloneo-etini-akpayang.shinyapps.io/Whatapp_Chat_analyzer/" target="_blank" class="text-indigo-600 hover:underline">View App →</a> |
+            <a href="https://posit.cloud/content/8657502" target="_blank" class="text-indigo-600 hover:underline">Sample Data</a>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
@@ -114,7 +155,7 @@
     <div class="max-w-4xl mx-auto px-6 text-center">
       <h3 class="text-3xl font-semibold mb-6">Get In Touch</h3>
       <p class="text-gray-600 mb-4">Feel free to reach out via email or connect with me on LinkedIn.</p>
-      <a href="mailto:princeakpayang@gmail.com" class="bg-indigo-600 text-white px-6 py-3 rounded-lg shadow hover:bg-indigo-700">Email Me</a>
+      <a href="mailto:your.email@example.com" class="bg-indigo-600 text-white px-6 py-3 rounded-lg shadow hover:bg-indigo-700">Email Me</a>
     </div>
   </section>
 
