--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <nav class="space-x-6">
         <a href="#about" class="hover:text-indigo-500">About</a>
         <a href="#analytics" class="hover:text-indigo-500">Analytics Skills</a>
+        <a href="#meal" class="hover:text-indigo-500">MEAL Impact</a>
+        <a href="#metrics" class="hover:text-indigo-500">Key Metrics</a>
         <a href="#projects" class="hover:text-indigo-500">Projects</a>
         <a href="#contact" class="hover:text-indigo-500">Contact</a>
       </nav>
@@ -24,16 +26,16 @@
 
   <!-- Hero Section -->
   <section class="min-h-screen flex flex-col justify-center items-center text-center px-6 pt-20">
-    <img src="assets/profile.png" alt="Etini Akpayang" class="w-32 h-32 rounded-full shadow-lg mb-4">
+    <img src="assets/profile.jpg" alt="Etini Akpayang" class="w-32 h-32 rounded-full shadow-lg mb-4">
     <h2 class="text-4xl md:text-5xl font-bold mb-4">Hi, I'm <span class="text-indigo-600">Etini Akpayang</span></h2>
     <p class="text-lg md:text-xl text-gray-600 max-w-2xl mb-6">
-      A Statistician and Tech-Savvy Educator, passionate about data, technology, and empowering learners with the right tools to excel in academics and beyond.
+      Statistician | Data Analyst | MEAL Specialist | Educator passionate about leveraging data to drive social impact and innovative problem solving.
     </p>
-    <div class="space-x-4">
+    <div class="space-x-4 mb-4">
       <a href="#projects" class="bg-indigo-600 text-white px-6 py-3 rounded-lg shadow hover:bg-indigo-700">View My Work</a>
-      <a href="#contact" class="border border-indigo-600 text-indigo-600 px-6 py-3 rounded-lg shadow hover:bg-indigo-50">Contact Me</a>
+      <a href="assets/Etini_Inemesit_Akpayang_Statistician.pdf" class="border border-indigo-600 text-indigo-600 px-6 py-3 rounded-lg shadow hover:bg-indigo-50" target="_blank">Download CV</a>
     </div>
-    <div class="mt-6 space-x-4 text-2xl">
+    <div class="space-x-4 text-2xl">
       <a href="https://github.com/prince-akpayang" target="_blank" class="text-gray-600 hover:text-indigo-600"><i class="fab fa-github"></i></a>
       <a href="https://linkedin.com/in/etini-akpayang" target="_blank" class="text-gray-600 hover:text-indigo-600"><i class="fab fa-linkedin"></i></a>
       <a href="https://twitter.com/" target="_blank" class="text-gray-600 hover:text-indigo-600"><i class="fab fa-twitter"></i></a>
@@ -45,7 +47,7 @@
     <div class="max-w-4xl mx-auto px-6 text-center">
       <h3 class="text-3xl font-semibold mb-6">About Me</h3>
       <p class="text-gray-600 text-lg leading-relaxed">
-        I am a Statistician with an MSc in Statistics, currently focused on education, technology, and data-driven solutions.
+        I am a Statistician with an MSc in Statistics, currently focused on education, technology, monitoring and evaluation, and data-driven solutions. 
         Through initiatives like Teach For Nigeria and various STEM projects, I aim to inspire learners and educators with innovative approaches to teaching and learning.
       </p>
     </div>
@@ -56,7 +58,7 @@
     <div class="max-w-6xl mx-auto px-6 text-center">
       <h3 class="text-3xl font-semibold mb-12">Data Analytics Expertise</h3>
       <p class="text-gray-600 text-lg mb-10">
-        I specialize in extracting insights from data using statistical methods, visualization, and modern analytics tools to drive decision-making.
+        I specialize in transforming data into actionable insights using advanced statistical methods, visualization tools, and predictive modeling.
       </p>
       <div class="grid md:grid-cols-3 gap-8">
         <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
@@ -78,77 +80,50 @@
     </div>
   </section>
 
-  <!-- Projects Section -->
-  <section id="projects" class="py-20 bg-white">
-    <div class="max-w-6xl mx-auto px-6">
-      <h3 class="text-3xl font-semibold text-center mb-12">Projects</h3>
-      <div class="grid md:grid-cols-3 gap-8">
-
-        <!-- Project 1 -->
-        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="assets/handwash analysis.png" alt="Dr. Semmelweis and the Discovery of Handwashing" class="w-full">
-          <div class="p-6">
-            <h4 class="font-bold text-xl mb-2">Dr. Semmelweis and the Discovery of Handwashing</h4>
-            <p class="text-gray-600 mb-4">Data analysis project exploring historical medical data that led to the discovery of handwashing as a life-saving practice.</p>
-            <a href="https://app.datacamp.com/workspace/w/0b1b9534-f77c-43f6-9323-5ac560341302/edit" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
-          </div>
+  <!-- MEAL Impact Section -->
+  <section id="meal" class="py-20 bg-white">
+    <div class="max-w-6xl mx-auto px-6 text-center">
+      <h3 class="text-3xl font-semibold mb-12">MEAL Impact</h3>
+      <div class="grid md:grid-cols-2 gap-8">
+        <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="font-semibold text-xl mb-2">Growth Collective – MEAL Team Lead</h4>
+          <p class="text-gray-600">Led monitoring and evaluation processes for community projects, designing data collection tools, assessing program effectiveness, and ensuring continuous learning feedback loops with stakeholders.</p>
         </div>
-
-        <!-- Project 2 -->
-        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="assets/pandemic analysis.png" alt="Visualizing COVID-19" class="w-full">
-          <div class="p-6">
-            <h4 class="font-bold text-xl mb-2">Visualizing COVID-19</h4>
-            <p class="text-gray-600 mb-4">Interactive visualizations showing the global spread of COVID-19 and its impact across countries.</p>
-            <a href="https://app.datacamp.com/workspace/w/0434d327-6d31-43ac-b422-bf154797b0b1/edit" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
-          </div>
+        <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="font-semibold text-xl mb-2">Waste to Wealth Initiative – M&E Specialist</h4>
+          <p class="text-gray-600">Measured the impact of recycling waste paper into ceiling boards to improve school learning environments, refining production techniques for sustainability and scalability.</p>
         </div>
-
-        <!-- Project 3 -->
-        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="assets/masters research.PNG" alt="Masters Thesis 2021" class="w-full">
-          <div class="p-6">
-            <h4 class="font-bold text-xl mb-2">Masters Thesis 2021</h4>
-            <p class="text-gray-600 mb-4">Advanced statistical research focused on Bayesian approaches for educational data analysis.</p>
-            <a href="assets/MScThesis.pdf" target="_blank" class="text-indigo-600 hover:underline">Read Thesis →</a>
-          </div>
-        </div>
-
-        <!-- Project 4 -->
-        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="assets/statReport.png" alt="Statistical Report" class="w-full">
-          <div class="p-6">
-            <h4 class="font-bold text-xl mb-2">Statistical Report</h4>
-            <p class="text-gray-600 mb-4">Comparative analysis of three non-parametric Bayesian techniques with practical implications.</p>
-            <a href="https://github.com/Prince-akpayang/Comparison-of-three-common-nonparametric-Bayes-techniques-" target="_blank" class="text-indigo-600 hover:underline">View Report →</a>
-          </div>
-        </div>
-
-        <!-- Project 5 -->
-        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="assets/Analytics dashboard.PNG" alt="Learner Performance Analytics Dashboard" class="w-full">
-          <div class="p-6">
-            <h4 class="font-bold text-xl mb-2">Learner Performance Analytics Dashboard</h4>
-            <p class="text-gray-600 mb-4">An interactive dashboard analyzing learner performance metrics using R Shiny for real-time insights.</p>
-            <a href="https://sloneo-etini-akpayang.shinyapps.io/TFN_FELLOWS_STATPAD/" target="_blank" class="text-indigo-600 hover:underline">View Dashboard →</a> |
-            <a href="https://github.com/Prince-akpayang/statpad/edit/main/README.md" target="_blank" class="text-indigo-600 hover:underline">Scripts</a>
-          </div>
-        </div>
-
-        <!-- Project 6 -->
-        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="assets/whatsanals.PNG" alt="Whatsapp Chat Analysis" class="w-full">
-          <div class="p-6">
-            <h4 class="font-bold text-xl mb-2">Whatsapp Chat Analysis</h4>
-            <p class="text-gray-600 mb-4">Data cleaning and sentiment analysis of WhatsApp chats with interactive visual analytics.</p>
-            <a href="https://sloneo-etini-akpayang.shinyapps.io/Whatapp_Chat_analyzer/" target="_blank" class="text-indigo-600 hover:underline">View App →</a> |
-            <a href="https://posit.cloud/content/8657502" target="_blank" class="text-indigo-600 hover:underline">Sample Data</a>
-          </div>
-        </div>
-
       </div>
     </div>
   </section>
+
+  <!-- Key Metrics Section -->
+  <section id="metrics" class="py-20 bg-gray-100">
+    <div class="max-w-6xl mx-auto px-6 text-center">
+      <h3 class="text-3xl font-semibold mb-12">Key Impact Metrics</h3>
+      <div class="grid md:grid-cols-4 gap-8 text-center">
+        <div>
+          <p class="text-4xl font-bold text-indigo-600">30%</p>
+          <p class="text-gray-600">Improvement in student performance through data-driven teaching.</p>
+        </div>
+        <div>
+          <p class="text-4xl font-bold text-indigo-600">100+</p>
+          <p class="text-gray-600">Individuals impacted via community engagement projects.</p>
+        </div>
+        <div>
+          <p class="text-4xl font-bold text-indigo-600">25%</p>
+          <p class="text-gray-600">Increase in student engagement with tailored curricula.</p>
+        </div>
+        <div>
+          <p class="text-4xl font-bold text-indigo-600">15%</p>
+          <p class="text-gray-600">Inventory reduction achieved in warehouse data optimization.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Projects Section -->
+  <!-- Keep your updated projects section here as shared before -->
 
   <!-- Contact Section -->
   <section id="contact" class="py-20 bg-gray-100">
