--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- Hero Section -->
   <section class="min-h-screen flex flex-col justify-center items-center text-center px-6 pt-20">
-    <img src="assets/profile.jpg" alt="Etini Akpayang" class="w-32 h-32 rounded-full shadow-lg mb-4">
+    <img src="assets/profile.png" alt="Etini Akpayang" class="w-32 h-32 rounded-full shadow-lg mb-4">
     <h2 class="text-4xl md:text-5xl font-bold mb-4">Hi, I'm <span class="text-indigo-600">Etini Akpayang</span></h2>
     <p class="text-lg md:text-xl text-gray-600 max-w-2xl mb-6">
       Statistician | Data Analyst | MEAL Specialist | Educator passionate about leveraging data to drive social impact and innovative problem solving.
