--- a/index.html
+++ b/index.html
@@ -192,7 +192,27 @@
 
       </div>
     </div>
-  </section>
+
+     <!-- Project 7: Predicting Student Dropout Risk -->
+<div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+  <img src="assets/dropout-risk.jpg" alt="Predicting Student Dropout Risk" class="w-full">
+  <div class="p-6">
+    <h4 class="font-bold text-xl mb-2">Predicting Student Dropout Risk</h4>
+    <p class="text-gray-600 mb-4">Machine learning model built in R to estimate the likelihood of school dropout based on socio-economic, attendance, and performance data. Aims to help schools take early intervention steps to reduce dropout rates.</p>
+    <a href="#" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
+  </div>
+</div>
+
+<!-- Project 8: Real-Time Mental Health Sentiment Tracker -->
+<div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+  <img src="assets/mental-health.jpg" alt="Real-Time Mental Health Sentiment Tracker" class="w-full">
+  <div class="p-6">
+    <h4 class="font-bold text-xl mb-2">Real-Time Mental Health Sentiment Tracker</h4>
+    <p class="text-gray-600 mb-4">Python-based NLP model using Reddit and Twitter data to monitor mental health sentiment trends. Leverages Transformer models (BERT) to classify and visualize public mental health signals in real time.</p>
+    <a href="#" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
+  </div>
+</div>
+</section>
 
 
   <!-- Contact Section -->
