--- a/index.html
+++ b/index.html
@@ -1,109 +1,233 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Etini Akpayang | Data Analyst & SDG Advocate</title>
-  <link rel="stylesheet" href="assets/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Etini Akpayang | Portfolio</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
-<body>
-  <header>
-    <h1>Etini Akpayang</h1>
-    <p>A Statistician and Tech-Savvy Educator | Data Analyst | SDG Advocate</p>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#certifications">Certifications</a>
-      <a href="#experience">Experience</a>
-      <a href="#impact">Social Impact</a>
-      <a href="#contact">Contact</a>
-    </nav>
+<body class="bg-gray-50 text-gray-800 font-sans">
+
+  <!-- Navbar -->
+  <header class="fixed top-0 left-0 w-full bg-white shadow-md z-50">
+    <div class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
+      <h1 class="text-2xl font-bold text-indigo-600">Etini Akpayang</h1>
+      <nav class="space-x-6">
+        <a href="#about" class="hover:text-indigo-500">About</a>
+        <a href="#analytics" class="hover:text-indigo-500">Analytics Skills</a>
+        <a href="#meal" class="hover:text-indigo-500">MEAL Impact</a>
+        <a href="#metrics" class="hover:text-indigo-500">Key Metrics</a>
+        <a href="#projects" class="hover:text-indigo-500">Projects</a>
+        <a href="#contact" class="hover:text-indigo-500">Contact</a>
+      </nav>
+    </div>
   </header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I am a Statistician with an MSc in Statistics, passionate about data, technology, and empowering communities. With experience in teaching, M&E, and research, I help drive innovation in education, data analytics, and sustainable development. I am proficient in R, Python, SQL, Power BI, and more.</p>
-  </section>
-
-  <section id="projects">
-    <h2>Project Portfolio</h2>
-    <div class="project">
-      <h3>Dr. Semmelweis and the Discovery of Handwashing</h3>
-      <img src="images/handwash analysis.png" alt="Handwashing Analysis">
-      <a href="https://app.datacamp.com/workspace/w/0b1b9534-f77c-43f6-9323-5ac560341302/edit">View Project</a>
+  <!-- Hero Section -->
+  <section class="min-h-screen flex flex-col justify-center items-center text-center px-6 pt-20">
+    <img src="assets/profile.png" alt="Etini Akpayang" class="w-32 h-32 rounded-full shadow-lg mb-4">
+    <h2 class="text-4xl md:text-5xl font-bold mb-4">Hi, I'm <span class="text-indigo-600">Etini Akpayang</span></h2>
+    <p class="text-lg md:text-xl text-gray-600 max-w-2xl mb-6">
+      Statistician | Data Analyst | MEAL Specialist | Educator passionate about leveraging data to drive social impact and innovative problem solving.
+    </p>
+    <div class="space-x-4 mb-4">
+      <a href="#projects" class="bg-indigo-600 text-white px-6 py-3 rounded-lg shadow hover:bg-indigo-700">View My Work</a>
+      <a href="assets/Etini_Inemesit_Akpayang_Statistician.pdf" class="border border-indigo-600 text-indigo-600 px-6 py-3 rounded-lg shadow hover:bg-indigo-50" target="_blank">Download CV</a>
     </div>
-    <div class="project">
-      <h3>Visualizing COVID-19</h3>
-      <img src="images/pandemic analysis.png" alt="COVID-19 Visualization">
-      <a href="https://app.datacamp.com/workspace/w/0434d327-6d31-43ac-b422-bf154797b0b1/edit">View Project</a>
-    </div>
-    <div class="project">
-      <h3>Master's Thesis: Bayesian Techniques</h3>
-      <img src="images/masters research.PNG" alt="Masters Thesis">
-      <a href="pdf/MScThesis.pdf">Download Thesis</a>
-    </div>
-    <div class="project">
-      <h3>Whatsapp Chat Analyzer</h3>
-      <img src="images/whatsanals.PNG" alt="Whatsapp Chat Analysis">
-      <a href="https://sloneo-etini-akpayang.shinyapps.io/Whatapp_Chat_analyzer/">View App</a>
-    </div>
-    <div class="project">
-      <h3>Learner Performance Dashboard</h3>
-      <img src="images/Analytics dashboard.PNG" alt="Performance Dashboard">
-      <a href="https://sloneo-etini-akpayang.shinyapps.io/TFN_FELLOWS_STATPAD/">View Dashboard</a>
-    </div>
-    <div class="project">
-      <h3>Google Capstone Project (Ongoing)</h3>
-      <img src="images/Task excel kpi.PNG" alt="Cyclistic Capstone">
-      <p>Analyzing bike-sharing behavior of casual vs. member riders. Insights on usage patterns, time trends, and user retention strategies using Python.</p>
+    <div class="space-x-4 text-2xl">
+      <a href="https://github.com/prince-akpayang" target="_blank" class="text-gray-600 hover:text-indigo-600"><i class="fab fa-github"></i></a>
+      <a href="https://linkedin.com/in/etini-akpayang" target="_blank" class="text-gray-600 hover:text-indigo-600"><i class="fab fa-linkedin"></i></a>
+      <a href="https://twitter.com/" target="_blank" class="text-gray-600 hover:text-indigo-600"><i class="fab fa-twitter"></i></a>
     </div>
   </section>
 
-  <section id="certifications">
-    <h2>Certifications</h2>
-    <ul>
-      <li>Google Data Analytics Certificate – Coursera</li>
-      <li>Professional Diploma in Program Management – MTF-Udemy</li>
-      <li>ChatGPT Bootcamp for Beginners – Udemy</li>
-      <li>Introduction to Data Analytics with Power BI – Alison</li>
-      <li>MEAL Essentials Certification – Disaster Ready</li>
-      <li>Financial Management Essentials for NGOs – Disaster Ready</li>
-    </ul>
+  <!-- About Section -->
+  <section id="about" class="py-20 bg-white">
+    <div class="max-w-4xl mx-auto px-6 text-center">
+      <h3 class="text-3xl font-semibold mb-6">About Me</h3>
+      <p class="text-gray-600 text-lg leading-relaxed">
+        I am a Statistician with an MSc in Statistics, currently focused on education, technology, monitoring and evaluation, and data-driven solutions. 
+        Through initiatives like Teach For Nigeria and various STEM projects, I aim to inspire learners and educators with innovative approaches to teaching and learning.
+      </p>
+    </div>
   </section>
 
-  <section id="experience">
-    <h2>Experience</h2>
-    <ul>
-      <li><strong>Teach for Nigeria Fellow</strong> – Designed curricula, conducted trainings, built student performance tools.</li>
-      <li><strong>MEAL Lead, Growth Collective</strong> – Developed M&E tools, analyzed impact data, drove strategy adaptation.</li>
-      <li><strong>Research Assistant, FUNAAB</strong> – Conducted research and trained students on statistical tools.</li>
-      <li><strong>Data Analyst, Kwara State Bureau</strong> – Supported surveys, reports, and policy decisions with data.</li>
-    </ul>
+  <!-- Data Analytics Expertise Section -->
+  <section id="analytics" class="py-20 bg-gray-100">
+    <div class="max-w-6xl mx-auto px-6 text-center">
+      <h3 class="text-3xl font-semibold mb-12">Data Analytics Expertise</h3>
+      <p class="text-gray-600 text-lg mb-10">
+        I specialize in transforming data into actionable insights using advanced statistical methods, visualization tools, and predictive modeling.
+      </p>
+      <div class="grid md:grid-cols-3 gap-8">
+        <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
+          <i class="fas fa-database text-indigo-600 text-4xl mb-4"></i>
+          <h4 class="font-semibold text-xl mb-2">Data Cleaning & Analysis</h4>
+          <p class="text-gray-600">Proficient in R, Python, and SQL for processing and analyzing datasets.</p>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
+          <i class="fas fa-chart-bar text-indigo-600 text-4xl mb-4"></i>
+          <h4 class="font-semibold text-xl mb-2">Data Visualization</h4>
+          <p class="text-gray-600">Experience creating dashboards with Power BI, Tableau, and ggplot2.</p>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
+          <i class="fas fa-brain text-indigo-600 text-4xl mb-4"></i>
+          <h4 class="font-semibold text-xl mb-2">Predictive Modeling</h4>
+          <p class="text-gray-600">Skilled in building statistical models and forecasts for decision support.</p>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <section id="impact">
-    <h2>Social Impact & SDG Engagement</h2>
-    <ul>
-      <li><strong>Waste-to-Wealth Initiative (TFN)</strong>: Recycled over a tonne of paper into ceiling boards, improved classroom comfort, trained 1,000+ students. <a href="https://www.linkedin.com/company/waste-to-wealth-initiative/">See More</a></li>
-      <li><strong>SDG Health Awareness Campaign</strong>: Led a Good Health and Well-being outreach at Alaye High School. <a href="https://drive.google.com/drive/folders/1qGk-QWJdz_DrQupk9wkmkd12-tT3WsVI">Photos</a></li>
-      <li><strong>SDSN Climate Webinar Host</strong>: Co-hosted an SDG advocacy webinar with SDSN Nigeria focused on climate change.</li>
-      <li><strong>EmpowerEd Project</strong>: Trained teachers across Ogun State on using tech tools for effective lesson delivery and resource creation.</li>
-      <li><strong>Grow Your Reader Foundation</strong>: Participated in a UNESCO-linked global exchange program focused on SDG 4 and global citizenship.</li>
-      <li><strong>NSA/Statistics Awareness March</strong>: Helped organize statistical awareness campaigns in Uyo.</li>
-      <li><strong>Community Sanitation (NYSC)</strong>: Served as Secretary for Sanitation CDS, leading public clean-up and awareness events in Ilorin.</li>
-    </ul>
+  <!-- MEAL Impact Section -->
+  <section id="meal" class="py-20 bg-white">
+    <div class="max-w-6xl mx-auto px-6 text-center">
+      <h3 class="text-3xl font-semibold mb-12">MEAL Impact</h3>
+      <div class="grid md:grid-cols-2 gap-8">
+        <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="font-semibold text-xl mb-2">Growth Collective – MEAL Team Lead</h4>
+          <p class="text-gray-600">Led monitoring and evaluation processes for community projects, designing data collection tools, assessing program effectiveness, and ensuring continuous learning feedback loops with stakeholders.</p>
+        </div>
+        <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="font-semibold text-xl mb-2">Waste to Wealth Initiative – M&E Specialist</h4>
+          <p class="text-gray-600">Measured the impact of recycling waste paper into ceiling boards to improve school learning environments, refining production techniques for sustainability and scalability.</p>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:princeakpayang@gmail.com">princeakpayang@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/Prince-akpayang">github.com/Prince-akpayang</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/etini-akpayang">linkedin.com/in/etini-akpayang</a></p>
+  <!-- Key Metrics Section -->
+  <section id="metrics" class="py-20 bg-gray-100">
+    <div class="max-w-6xl mx-auto px-6 text-center">
+      <h3 class="text-3xl font-semibold mb-12">Key Impact Metrics</h3>
+      <div class="grid md:grid-cols-4 gap-8 text-center">
+        <div>
+          <p class="text-4xl font-bold text-indigo-600">30%</p>
+          <p class="text-gray-600">Improvement in student performance through data-driven teaching.</p>
+        </div>
+        <div>
+          <p class="text-4xl font-bold text-indigo-600">100+</p>
+          <p class="text-gray-600">Individuals impacted via community engagement projects.</p>
+        </div>
+        <div>
+          <p class="text-4xl font-bold text-indigo-600">25%</p>
+          <p class="text-gray-600">Increase in student engagement with tailored curricula.</p>
+        </div>
+        <div>
+          <p class="text-4xl font-bold text-indigo-600">15%</p>
+          <p class="text-gray-600">Inventory reduction achieved in warehouse data optimization.</p>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <footer>
+  <!-- Projects Section -->
+   <section id="projects" class="py-20 bg-white">
+    <div class="max-w-6xl mx-auto px-6">
+      <h3 class="text-3xl font-semibold text-center mb-12">Projects</h3>
+      <div class="grid md:grid-cols-3 gap-8">
+
+        <!-- Project 1 -->
+        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+          <img src="assets/handwash analysis.png" alt="Dr. Semmelweis and the Discovery of Handwashing" class="w-full">
+          <div class="p-6">
+            <h4 class="font-bold text-xl mb-2">Dr. Semmelweis and the Discovery of Handwashing</h4>
+            <p class="text-gray-600 mb-4">Data analysis project exploring historical medical data that led to the discovery of handwashing as a life-saving practice.</p>
+            <a href="https://app.datacamp.com/workspace/w/0b1b9534-f77c-43f6-9323-5ac560341302/edit" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
+          </div>
+        </div>
+
+        <!-- Project 2 -->
+        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+          <img src="assets/pandemic analysis.png" alt="Visualizing COVID-19" class="w-full">
+          <div class="p-6">
+            <h4 class="font-bold text-xl mb-2">Visualizing COVID-19</h4>
+            <p class="text-gray-600 mb-4">Interactive visualizations showing the global spread of COVID-19 and its impact across countries.</p>
+            <a href="https://app.datacamp.com/workspace/w/0434d327-6d31-43ac-b422-bf154797b0b1/edit" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
+          </div>
+        </div>
+
+        <!-- Project 3 -->
+        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+          <img src="assets/masters research.PNG" alt="Masters Thesis 2021" class="w-full">
+          <div class="p-6">
+            <h4 class="font-bold text-xl mb-2">Masters Thesis 2021</h4>
+            <p class="text-gray-600 mb-4">Advanced statistical research focused on Bayesian approaches for educational data analysis.</p>
+            <a href="assets/MScThesis.pdf" target="_blank" class="text-indigo-600 hover:underline">Read Thesis →</a>
+          </div>
+        </div>
+
+        <!-- Project 4 -->
+        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+          <img src="assets/statReport.png" alt="Statistical Report" class="w-full">
+          <div class="p-6">
+            <h4 class="font-bold text-xl mb-2">Statistical Report</h4>
+            <p class="text-gray-600 mb-4">Comparative analysis of three non-parametric Bayesian techniques with practical implications.</p>
+            <a href="https://github.com/Prince-akpayang/Comparison-of-three-common-nonparametric-Bayes-techniques-" target="_blank" class="text-indigo-600 hover:underline">View Report →</a>
+          </div>
+        </div>
+
+        <!-- Project 5 -->
+        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+          <img src="assets/Analytics dashboard.PNG" alt="Learner Performance Analytics Dashboard" class="w-full">
+          <div class="p-6">
+            <h4 class="font-bold text-xl mb-2">Learner Performance Analytics Dashboard</h4>
+            <p class="text-gray-600 mb-4">An interactive dashboard analyzing learner performance metrics using R Shiny for real-time insights.</p>
+            <a href="https://sloneo-etini-akpayang.shinyapps.io/TFN_FELLOWS_STATPAD/" target="_blank" class="text-indigo-600 hover:underline">View Dashboard →</a> |
+            <a href="https://github.com/Prince-akpayang/statpad/edit/main/README.md" target="_blank" class="text-indigo-600 hover:underline">Scripts</a>
+          </div>
+        </div>
+
+        <!-- Project 6 -->
+        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+          <img src="assets/whatsanals.PNG" alt="Whatsapp Chat Analysis" class="w-full">
+          <div class="p-6">
+            <h4 class="font-bold text-xl mb-2">Whatsapp Chat Analysis</h4>
+            <p class="text-gray-600 mb-4">Data cleaning and sentiment analysis of WhatsApp chats with interactive visual analytics.</p>
+            <a href="https://sloneo-etini-akpayang.shinyapps.io/Whatapp_Chat_analyzer/" target="_blank" class="text-indigo-600 hover:underline">View App →</a> |
+            <a href="https://posit.cloud/content/8657502" target="_blank" class="text-indigo-600 hover:underline">Sample Data</a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+     <!-- Project 7: Predicting Student Dropout Risk -->
+<div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+  <img src="assets/dropout-risk.jpg" alt="Predicting Student Dropout Risk" class="w-full">
+  <div class="p-6">
+    <h4 class="font-bold text-xl mb-2">Predicting Student Dropout Risk</h4>
+    <p class="text-gray-600 mb-4">Machine learning model built in R to estimate the likelihood of school dropout based on socio-economic, attendance, and performance data. Aims to help schools take early intervention steps to reduce dropout rates.</p>
+    <a href="#" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
+  </div>
+</div>
+
+<!-- Project 8: Real-Time Mental Health Sentiment Tracker -->
+<div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+  <img src="assets/mental-health.jpg" alt="Real-Time Mental Health Sentiment Tracker" class="w-full">
+  <div class="p-6">
+    <h4 class="font-bold text-xl mb-2">Real-Time Mental Health Sentiment Tracker</h4>
+    <p class="text-gray-600 mb-4">Python-based NLP model using Reddit and Twitter data to monitor mental health sentiment trends. Leverages Transformer models (BERT) to classify and visualize public mental health signals in real time.</p>
+    <a href="#" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
+  </div>
+</div>
+</section>
+
+
+  <!-- Contact Section -->
+  <section id="contact" class="py-20 bg-gray-100">
+    <div class="max-w-4xl mx-auto px-6 text-center">
+      <h3 class="text-3xl font-semibold mb-6">Get In Touch</h3>
+      <p class="text-gray-600 mb-4">Feel free to reach out via email or connect with me on LinkedIn.</p>
+      <a href="mailto:your.email@example.com" class="bg-indigo-600 text-white px-6 py-3 rounded-lg shadow hover:bg-indigo-700">Email Me</a>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-gray-900 text-gray-300 py-6 text-center">
     <p>&copy; 2025 Etini Akpayang. All rights reserved.</p>
-    <p style="font-size:11px">Template adapted from <a href="https://github.com/evanca/quick-portfolio">evanca/quick-portfolio</a></p>
   </footer>
+
 </body>
 </html>
