--- a/index.html
+++ b/index.html
@@ -146,6 +146,94 @@
         <!-- Original 8 Projects here (unchanged) -->
         <!-- New Projects -->
         <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+          <img src="assets/handwash analysis.png" alt="Dr. Semmelweis and the Discovery of Handwashing" class="w-full">
+          <div class="p-6">
+            <h4 class="font-bold text-xl mb-2">Dr. Semmelweis and the Discovery of Handwashing</h4>
+            <p class="text-gray-600 mb-4">Data analysis project exploring historical medical data that led to the discovery of handwashing as a life-saving practice.</p>
+            <a href="https://app.datacamp.com/workspace/w/0b1b9534-f77c-43f6-9323-5ac560341302/edit" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
+          </div>
+        </div>
+
+        <!-- Project 2 -->
+        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+          <img src="assets/pandemic analysis.png" alt="Visualizing COVID-19" class="w-full">
+          <div class="p-6">
+            <h4 class="font-bold text-xl mb-2">Visualizing COVID-19</h4>
+            <p class="text-gray-600 mb-4">Interactive visualizations showing the global spread of COVID-19 and its impact across countries.</p>
+            <a href="https://app.datacamp.com/workspace/w/0434d327-6d31-43ac-b422-bf154797b0b1/edit" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
+          </div>
+        </div>
+
+        <!-- Project 3 -->
+        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+          <img src="assets/masters research.PNG" alt="Masters Thesis 2021" class="w-full">
+          <div class="p-6">
+            <h4 class="font-bold text-xl mb-2">Masters Thesis 2021</h4>
+            <p class="text-gray-600 mb-4">Advanced statistical research focused on Bayesian approaches for educational data analysis.</p>
+            <a href="assets/MScThesis.pdf" target="_blank" class="text-indigo-600 hover:underline">Read Thesis →</a>
+          </div>
+        </div>
+
+        <!-- Project 4 -->
+        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+          <img src="assets/statReport.png" alt="Statistical Report" class="w-full">
+          <div class="p-6">
+            <h4 class="font-bold text-xl mb-2">Statistical Report</h4>
+            <p class="text-gray-600 mb-4">Comparative analysis of three non-parametric Bayesian techniques with practical implications.</p>
+            <a href="https://github.com/Prince-akpayang/Comparison-of-three-common-nonparametric-Bayes-techniques-" target="_blank" class="text-indigo-600 hover:underline">View Report →</a>
+          </div>
+        </div>
+
+        <!-- Project 5 -->
+        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+          <img src="assets/Analytics dashboard.PNG" alt="Learner Performance Analytics Dashboard" class="w-full">
+          <div class="p-6">
+            <h4 class="font-bold text-xl mb-2">Learner Performance Analytics Dashboard</h4>
+            <p class="text-gray-600 mb-4">An interactive dashboard analyzing learner performance metrics using R Shiny for real-time insights.</p>
+            <a href="https://sloneo-etini-akpayang.shinyapps.io/TFN_FELLOWS_STATPAD/" target="_blank" class="text-indigo-600 hover:underline">View Dashboard →</a> |
+            <a href="https://github.com/Prince-akpayang/statpad/edit/main/README.md" target="_blank" class="text-indigo-600 hover:underline">Scripts</a>
+          </div>
+        </div>
+
+        <!-- Project 6 -->
+        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+          <img src="assets/whatsanals.PNG" alt="Whatsapp Chat Analysis" class="w-full">
+          <div class="p-6">
+            <h4 class="font-bold text-xl mb-2">Whatsapp Chat Analysis</h4>
+            <p class="text-gray-600 mb-4">Data cleaning and sentiment analysis of WhatsApp chats with interactive visual analytics.</p>
+            <a href="https://sloneo-etini-akpayang.shinyapps.io/Whatapp_Chat_analyzer/" target="_blank" class="text-indigo-600 hover:underline">View App →</a> |
+            <a href="https://posit.cloud/content/8657502" target="_blank" class="text-indigo-600 hover:underline">Sample Data</a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+     <!-- Project 7: Predicting Student Dropout Risk -->
+<div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+  <img src="assets/dropout-risk.jpg" alt="Predicting Student Dropout Risk" class="w-full">
+  <div class="p-6">
+    <h4 class="font-bold text-xl mb-2">Predicting Student Dropout Risk</h4>
+    <p class="text-gray-600 mb-4">Machine learning model built in R to estimate the likelihood of school dropout based on socio-economic, attendance, and performance data. Aims to help schools take early intervention steps to reduce dropout rates.</p>
+    <a href="#" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
+  </div>
+</div>
+
+<!-- Project 8: Real-Time Mental Health Sentiment Tracker -->
+<div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+  <img src="assets/mental-health.jpg" alt="Real-Time Mental Health Sentiment Tracker" class="w-full">
+  <div class="p-6">
+    <h4 class="font-bold text-xl mb-2">Real-Time Mental Health Sentiment Tracker</h4>
+    <p class="text-gray-600 mb-4">Python-based NLP model using Reddit and Twitter data to monitor mental health sentiment trends. Leverages Transformer models (BERT) to classify and visualize public mental health signals in real time.</p>
+    <a href="#" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
+  </div>
+</div>
+
+
+
+
+
+
           <img src="assets/sdsn-outreach.jpg" alt="SDSN Good Health and Well-being Outreach" class="w-full">
           <div class="p-6">
             <h4 class="font-bold text-xl mb-2">SDSN Good Health and Well-being Outreach</h4>
@@ -175,7 +263,7 @@
     <div class="max-w-4xl mx-auto px-6 text-center">
       <h3 class="text-3xl font-semibold mb-6">Get In Touch</h3>
       <p class="text-gray-600 mb-4">Feel free to reach out via email or connect with me on LinkedIn.</p>
-      <a href="mailto:your.email@example.com" class="bg-indigo-600 text-white px-6 py-3 rounded-lg shadow hover:bg-indigo-700">Email Me</a>
+      <a href="mailto:princeakpayang@gmail.com" class="bg-indigo-600 text-white px-6 py-3 rounded-lg shadow hover:bg-indigo-700">Email Me</a>
     </div>
   </section>
 
