--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     </div>
     
 <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-    <img src="assets/stage0.jpg" alt="BigMart Sales Analysis - HNG Stage 0" class="w-full">
+    <img src="assets/stage0.jpeg" alt="BigMart Sales Analysis - HNG Stage 0" class="w-full">
     <div class="p-6">
         <h4 class="font-bold text-xl mb-2">BigMart Sales Analysis - HNG Stage 0</h4>
         <p class="text-gray-600 mb-4">A complete Excel data analytics project analyzing 8,500+ BigMart sales records to evaluate how product features and outlet characteristics impact sales, featuring data cleaning, pivot analysis, and actionable business insights.</p>
