Add MovieLens Feature Engineering project section
Added a new project section for MovieLens Feature Engineering.

--- a/index.html
+++ b/index.html
@@ -215,6 +215,15 @@
           </div>
         </div>
 
+        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
+          <img src="assets/stage1.jpeg" alt="MovieLens Feature Engineering - HNG Stage 1" class="w-full">
+          <div class="p-6">
+            <h4 class="font-bold text-xl mb-2">MovieLens Feature Engineering - HNG Stage 1</h4>
+            <p class="text-gray-600 mb-4">A comprehensive R project performing data cleaning, merging, and engineering of 8 new features on the MovieLens dataset, followed by EDA to uncover rating patterns and insights for recommendation systems.</p>
+            <a href="https://drive.google.com/drive/folders/1u8fAXqZTyriW4KrNAM6_8WIkXJinem1a?usp=sharing" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
+          </div>
+        </div>
+
       </div>
     </div>
     
