--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </div>
 
         <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-            <img src="assets/stage2a.jpg" alt="HNG Ride SQL Business Analysis - Stage 2A" class="w-full">
+            <img src="assets/stage2a.jpeg" alt="HNG Ride SQL Business Analysis - Stage 2A" class="w-full">
             <div class="p-6">
                 <h4 class="font-bold text-xl mb-2">HNG Ride SQL Business Analysis - Stage 2A</h4>
                 <p class="text-gray-600 mb-4">A comprehensive SQL project cleaning messy ride-share data and performing complex business analytics to identify top drivers, revenue trends, and cancellation patterns for strategic decision-making.</p>
@@ -234,7 +234,7 @@
         </div>
         
         <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-            <img src="assets/stage2b.jpg" alt="Election Outlier Detection - Stage 2B" class="w-full">
+            <img src="assets/stage2b.jpeg" alt="Election Outlier Detection - Stage 2B" class="w-full">
             <div class="p-6">
                 <h4 class="font-bold text-xl mb-2">Election Outlier Detection - Stage 2B</h4>
                 <p class="text-gray-600 mb-4">A Python geospatial analysis project detecting voting irregularities by calculating outlier scores for polling units, using coordinate data and statistical methods to ensure election integrity.</p>
