--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         </div>
 
         <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="assets/sdsn-outreach.png" alt="SDSN Good Health and Well-being Outreach" class="w-full">
+          <img src="assets/sdsn-outreach.PNG" alt="SDSN Good Health and Well-being Outreach" class="w-full">
           <div class="p-6">
             <h4 class="font-bold text-xl mb-2">SDSN Good Health and Well-being Outreach</h4>
             <p class="text-gray-600 mb-4">Organized interactive sessions, hygiene demonstrations, and physical activities to promote SDG 3 awareness among students at Alaye High School.</p>
@@ -291,7 +291,7 @@
         </div>
       
         <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="assets/empowered.png" alt="EmpowerEd Teacher Training" class="w-full">
+          <img src="assets/empowered.PNG" alt="EmpowerEd Teacher Training" class="w-full">
           <div class="p-6">
             <h4 class="font-bold text-xl mb-2">EmpowerEd Teacher Training</h4>
             <p class="text-gray-600 mb-4">Trained teachers across Ogun State on integrating technology into classroom delivery, enabling more engaging and effective lessons.</p>
@@ -300,7 +300,7 @@
         </div>
         
         <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="assets/grow-your-reader.png" alt="Grow Your Reader Global Exchange" class="w-full">
+          <img src="assets/grow-your-reader.PNG" alt="Grow Your Reader Global Exchange" class="w-full">
           <div class="p-6">
             <h4 class="font-bold text-xl mb-2">Grow Your Reader Global Exchange</h4>
             <p class="text-gray-600 mb-4">Worked with Grow Your Reader Foundation and Bangladesh National Commission for UNESCO to create global citizenship awareness among students.</p>
